django_smg/frontend/src/components/landing_page/landing_page.module.css
.welcome_container {
  margin-bottom: 11rem;
}

.h1 {
  padding-bottom: 0;
  margin: 1rem;
  font-size: 5rem;
}

@media (max-width: 600px) {
  .h1 {
    font-size: 3rem;
  }
}

.table {
  display: inline-block;
  position: center;
}

.button {
  height: 4rem;
}

.space {
  display: inline-block;
  height: 2rem;
}

.welc_buttons {
  width: 80%;
}

.green {
  background-color: lightgreen;
}

.green:hover {
  background-color: white;
}

